--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+
+
 .App {
   text-align: center;
+  width:100%;
+  height:100%;
+ 
+
 }
 
 .App-logo {
@@ -13,17 +19,37 @@
   }
 }
 
-.App-header {
+.App-header, .Child-header{
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  width:100%;
+  height:100%;
+  gap:10rem;
 }
 
+.Child-header{
+  flex-direction: column;
+  gap:0.5rem;
+
+}
+.App-header h2{
+  font-weight: lighter;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.App-header span{
+  color:coral;
+  font-weight: lighter;
+}
 .App-link {
   color: #61dafb;
 }
